<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_books"
        android:icon="@drawable/ic_quick_books"
        android:title="@string/nav_books" />
    <item
        android:id="@+id/nav_audio"
        android:icon="@drawable/ic_quick_audio"
        android:title="@string/nav_audio" />
    <item
        android:id="@+id/nav_videos"
        android:icon="@drawable/ic_quick_video"
        android:title="@string/nav_videos" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_quick_contact"
        android:title="@string/nav_about" />
</menu>

